# geoguessr-ai

./: .env.example  .gitignore  404.html  Dockerfile  README.md  build_sqlite_clip.slurm  build_sqlite_raw.slurm  build_sqlite_tinyvit.slurm  config.py  d.slurm  duplicate-sqlite.slurm  example.py  example_data_loader.ipynb  file_list.txt  geo_utils.py  geoguessai.no.conf  index.html  inference.py  inference.slurm  main.py  main_coordinator.py  main_coordinator_idun.py  main_coordinator_idun_s3.py  pre_compute_protos.slurm  pretrain.slurm  pretrain_idun.py  pyproject.toml  requirements.txt  run_benchmark.py  run_benchmarking.slurm  run_local_benchmarking.py  run_local_inference.py  s3bucket.py  sv_points_map.html  tmp.py  train.slurm  train_data_from_s3.slurm  visualize_sv_points.py
.s3cache/: cache
backend/: api.py  climate_preprocessing.py  data.py  datapoint_dist.py  load_data.py  load_data_mod.py  metadata.py  roadNetworkSize.txt  s3bucket.md  s3bucket.py  training.py  vibe_load_data.py
data/: naive_cell.py  sv_countries.txt
dataset/: uK_R_MKnMOCWij-N8r3ilA_metadata.json
docs/: data_collection_overview.md  model_overview.md  sampling_pipeline_guide.md
finetune_tinyvit/: README.md  extract_embeddings.py  mmpretrain_export.py  prepare_dataset.py  train_tinyvit_timm.py
frontend/: package-lock.json
models/: geo_guessr.py  proto_refiner.py  super_guessr.py  tinyvit.py  utils.py
preprocessing/: climate.py  dataset_preprocessing.py  geo_utils.py
pretrain/: clip_embedder.py  embeded_dataset.py  leftdrive_countries.py  leftdrive_countries.txt  pretrain.py  (+2 more)
(+158 files in other folders)
